# face-trait-transformer

./: .gitignore  CHANGELOG.md  LICENSE  LICENSE-WEIGHTS  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: methods.md  model_card.md  quickstart.md
examples/: batch_inference.py  quickstart.ipynb  quickstart.py
examples/aging_validation/: README.md  predictions.csv  summary_stats.csv
examples/celeba_validation/: README.md  predictions.csv  summary_stats.csv
figures/schematic/: README.md  build.sh  schematic.tex
src/face_trait_transformer/: __init__.py  cli.py  data.py  features.py  figures.py  hub.py  metrics.py  model.py  predictor.py
tests/: conftest.py  test_package.py
training/: README.md  sweep_configs.json
training/results/: bootstrap_ci_test_split.csv  cv_per_attribute.csv  per_attribute_r_r2.csv  split_half_reliability.csv
training/scripts/: aggregate_cv.py  analyze_aging.py  analyze_celeba.py  apply_to_aging.py  apply_to_celeba.py  build_raw_targets.py  combine_feature_chunks.py  eval.py  export_bundle.py  extract_features.py  finetune.py  make_cv_splits.py  push_to_hf.py  regen_figures_fast.py  reliability.py  schematic.py  train.py
training/splits/: attribute_stats.npz  splits.json
training/splits/cv_splits/: fold_00.json  fold_01.json  fold_02.json  fold_03.json  fold_04.json  fold_05.json  fold_06.json  fold_07.json  fold_08.json  fold_09.json
